[gd_scene load_steps=8 format=3 uid="uid://b3wvduy77hk5t"]

[ext_resource type="Theme" uid="uid://bx3rgbhg0k4eg" path="res://assets/gui/main_gui.tres" id="1_wasji"]
[ext_resource type="Script" path="res://scenes/user_interface/settings_panel_container.gd" id="2_ydtsu"]
[ext_resource type="Texture2D" uid="uid://bswr84x52btas" path="res://assets/gui/symbols/windowed_symbol.png" id="3_qabod"]
[ext_resource type="Texture2D" uid="uid://ceemog84h0ds2" path="res://assets/gui/symbols/fullscreen_symbol.png" id="4_0aatb"]
[ext_resource type="Texture2D" uid="uid://bbirffq4to3a2" path="res://assets/gui/symbols/mute_symbol.png" id="5_mnpun"]
[ext_resource type="Texture2D" uid="uid://bc0iwsrpq5r12" path="res://assets/gui/symbols/unmute_symbol.png" id="6_jd640"]

[sub_resource type="LabelSettings" id="LabelSettings_f1skf"]
line_spacing = 0.0
font_size = 12

[node name="SettingsPanelContainer" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
mouse_filter = 2
theme = ExtResource("1_wasji")
script = ExtResource("2_ydtsu")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -94.0
offset_top = -52.5
offset_right = 94.0
offset_bottom = 52.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0

[node name="HelpLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
text = "Waiting for something to happen?
Are you sure?"
label_settings = SubResource("LabelSettings_f1skf")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="HSplitContainer" type="HSplitContainer" parent="VBoxContainer"]
layout_mode = 2
collapsed = true
dragger_visibility = 1

[node name="ScreenshotButton" type="Button" parent="VBoxContainer/HSplitContainer"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "\"Ctrl + F3\" 
also works!"
focus_mode = 0
text = "Screenshot"

[node name="HintButton" type="Button" parent="VBoxContainer/HSplitContainer"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Gives out Hints"
focus_mode = 0
text = "Hints"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="FullscreenButton" type="CheckButton" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
tooltip_text = "Toggle Fullscreen"
focus_mode = 0
theme_override_icons/checked = ExtResource("3_qabod")
theme_override_icons/unchecked = ExtResource("4_0aatb")
icon_alignment = 1

[node name="MuteButton" type="CheckButton" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
tooltip_text = "Mute All Sounds"
focus_mode = 0
theme_override_icons/checked = ExtResource("5_mnpun")
theme_override_icons/unchecked = ExtResource("6_jd640")
icon_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="MusicVolumeSlider" type="HSlider" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_vertical = 4
tooltip_text = "Adjust Music Volume"
focus_mode = 0
min_value = -30.0
max_value = 10.0

[node name="SoundFXVolumeSlider" type="HSlider" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_vertical = 4
tooltip_text = "Adjust Sounds Effects Volume"
focus_mode = 0
min_value = -30.0
max_value = 10.0

[node name="IdleTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 8.0
autostart = true
